--- a/app/src/main/res/layout/activity_capa.xml
+++ b/app/src/main/res/layout/activity_capa.xml
@@ -71,7 +71,7 @@
         />
 
     <ProgressBar
-        android:id="@+id/progressbar"
+        android:id="@+id/Widget_progressbar"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
         android:text="@string/texto_cadastro"
         android:textStyle="bold"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/progressbar"
+        app:layout_constraintTop_toBottomOf="@id/Widget_progressbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20dp"
