--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".inicial_Activity">
 
+
+
+    <ImageView
+        android:id="@+id/ic_perfil"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/ic_user"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
