--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -8,17 +8,37 @@
     android:background="@drawable/background"
     >
 
-
+     <View
+         android:layout_marginTop="20dp"
+         android:layout_marginLeft="20dp"
+         android:layout_marginRight="20dp"
+         android:id="@+id/utlitarios"
+         style="@style/Grupodecompoentes"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintTop_toTopOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         android:layout_height="50dp"
+         />
 
     <ImageView
         android:id="@+id/ic_perfil"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/utlitarios"
+        app:layout_constraintEnd_toEndOf="@id/utlitarios"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="300dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/ic_user"
+        />
+    <View
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_height="630dp"
+        style="@style/Grupodecompoentes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/utlitarios"
+        app:layout_constraintStart_toStartOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
