--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -52,13 +52,13 @@
       <TextView
           android:id="@+id/text_dados_nome"
           android:drawableStart="@drawable/ic_user"
-          android:hint=""
-          android:layout_marginTop="20dp"
+          android:text = ""
+          android:layout_marginTop="40dp"
           android:textColor="@color/black"
           android:textStyle="bold"
-          android:textSize="30dp"
+          android:textSize="20dp"
           android:layout_width="300dp"
-          android:layout_height="50dp"
+          android:layout_height="30dp"
           app:layout_constraintStart_toStartOf="@id/Dados_usuario"
           app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
           app:layout_constraintTop_toTopOf="@id/Dados_usuario"
@@ -66,13 +66,13 @@
     <TextView
         android:id="@+id/text_dados_email"
         android:drawableStart="@drawable/ic_email"
-        android:hint=""
-        android:layout_marginTop="20dp"
+        android:text= ""
+        android:layout_marginTop="30dp"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         app:layout_constraintStart_toStartOf="@id/Dados_usuario"
         app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
         app:layout_constraintTop_toBottomOf="@id/text_dados_nome"
@@ -82,6 +82,7 @@
         android:id="@+id/bt_deslogar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/text_dados_email"
         style="@style/Botao"
         android:text="@string/logoff"
