--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -21,16 +21,16 @@
          />
 
     <TextView
-        android:background="@drawable/grupo_usuario"
+
         android:id="@+id/img_perfil"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/utlitarios"
         app:layout_constraintEnd_toEndOf="@id/utlitarios"
         app:layout_constraintTop_toTopOf="@id/utlitarios"
-        android:layout_marginEnd="-300dp"
+        android:layout_marginEnd="-260dp"
         android:layout_marginTop="10dp"
-        android:drawableStart="@drawable/ic_user"
+        android:drawableRight="@drawable/ic_user"
         />
     <View
         android:layout_marginRight="20dp"
