--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -19,18 +19,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
     <Button
-        style="@style/Botao"
         android:id="@+id/bt_voltar"
+        style="@style/Botao"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="320dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="320dp"
         android:drawableBottom="@drawable/ic_voltar"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:layout_width="100dp"
@@ -40,7 +41,7 @@
         app:layout_constraintTop_toTopOf="@id/perfil_usario"
         app:layout_constraintBottom_toBottomOf="@id/perfil_usario"
         android:src="@drawable/ic_user"
-        android:contentDescription="@string/todo" />
+         />
 
     <View
         android:id="@+id/Dados_usuario"
@@ -62,20 +63,20 @@
           app:layout_constraintStart_toStartOf="@id/Dados_usuario"
           app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
           app:layout_constraintTop_toTopOf="@id/Dados_usuario"
-        app:drawableStartCompat="@drawable/ic_user" />
+        android:drawableLeft="@drawable/ic_user" />
     <TextView
         android:id="@+id/text_dados_email"
         android:text= ""
         android:layout_marginTop="30dp"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:layout_width="300dp"
         android:layout_height="30dp"
         app:layout_constraintStart_toStartOf="@id/Dados_usuario"
         app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
         app:layout_constraintTop_toBottomOf="@id/text_dados_nome"
-        app:drawableStartCompat="@drawable/ic_email" />
+        android:drawableLeft="@drawable/ic_email" />
 
     <Button
         android:id="@+id/bt_deslogar"
