--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -21,18 +21,30 @@
          android:layout_height="50dp"
          />
 
-   
+        <TextView
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="-240dp"
+            android:id="@+id/bt_perfil"
+            android:background="@drawable/ic_user"
+            android:layout_marginTop="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/utlitarios"
+            app:layout_constraintStart_toStartOf="@id/utlitarios"
+            app:layout_constraintEnd_toEndOf="@id/utlitarios"
+            app:layout_constraintTop_toTopOf="@id/utlitarios"
+            app:drawableStartCompat="@drawable/ic_user" />
 
     <androidx.fragment.app.FragmentContainerView
 
         android:id="@+id/container_fragment"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_height="630dp"
         style="@style/Grupodecompoentes"
+        android:layout_height="630dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/utlitarios"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/utlitarios" />
 </androidx.constraintlayout.widget.ConstraintLayout>
