--- a/app/src/main/res/layout/fragment_usuario.xml
+++ b/app/src/main/res/layout/fragment_usuario.xml
@@ -18,6 +18,7 @@
         />
 
     <ImageView
+
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:layout_constraintStart_toStartOf="@id/perfil_usario"
@@ -36,6 +37,7 @@
         app:layout_constraintTop_toBottomOf="@id/perfil_usario" />
 
     <TextView
+        android:background="@color/white"
         android:id="@+id/text_dados_nome"
         android:text = ""
         android:layout_marginTop="40dp"
@@ -49,6 +51,7 @@
         app:layout_constraintTop_toTopOf="@id/Dados_usuario"
         app:drawableLeftCompat="@drawable/ic_user" />
     <TextView
+        android:background="@color/white"
         android:id="@+id/text_dados_email"
         android:text= ""
         android:layout_marginTop="30dp"
@@ -60,7 +63,7 @@
         app:layout_constraintStart_toStartOf="@id/Dados_usuario"
         app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
         app:layout_constraintTop_toBottomOf="@id/text_dados_nome"
-        android:drawableLeft="@drawable/ic_email" />
+        app:drawableLeftCompat="@drawable/ic_email" />
 
     <Button
         android:id="@+id/bt_deslogar"
