--- a/app/src/main/res/layout/activity_capa.xml
+++ b/app/src/main/res/layout/activity_capa.xml
@@ -33,6 +33,7 @@
     <View
         android:id="@+id/container_component"
         style="@style/Grupodecompoentes"
+        android:layout_height="260dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +43,8 @@
     <EditText
         android:id="@+id/edit_login_email"
         style="@style/EditText"
-        android:drawableRight="@drawable/ic_email"
+        android:textColor="@color/white"
+        android:drawableStart="@drawable/ic_email"
         android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@id/container_component"
@@ -53,8 +55,9 @@
     <EditText
         android:id="@+id/edit_login_senha"
         style="@style/EditText"
-        android:drawableRight="@drawable/ic_pass"
+        android:drawableStart="@drawable/ic_pass"
         android:hint="Senha"
+        android:textColor="@color/white"
         android:inputType="numberPassword"
         app:layout_constraintEnd_toEndOf="@id/container_component"
         app:layout_constraintStart_toStartOf="@id/container_component"
@@ -65,6 +68,7 @@
         android:id="@+id/bt_entrar"
         style="@style/Botao"
         android:text="Entrar"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_login_senha"
@@ -85,7 +89,7 @@
         android:id="@+id/textView_texto_cadastro"
         android:text="@string/texto_cadastro"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/Widget_progressbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
