--- a/app/src/main/res/layout/fragment_notice.xml
+++ b/app/src/main/res/layout/fragment_notice.xml
@@ -5,7 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/silver"
     tools:context=".presenter.ViewModel.fragmentHome.NoticeFragment">
+
+    <View
+        android:id="@+id/lista_de_noticias"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="@style/Grupodecompoentes"
+        />
+
+
+
 
 
 
