--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="blue">#3d60b3</color>
      <color name="dark_blue">#252555</color>
     <color name="mid_blue">#637dd4</color>
+    <color name="lime_Green">#1AC927</color>
+    <color name="silver">#3B3B3B</color>
+   <color name="white_lolo">#CCCCCC</color>
 </resources>
+
