--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="20dp" />
-    <gradient
-        android:startColor="@color/white_blue"
-        android:centerColor="@color/mid_blue"
-        android:endColor="@color/dark_blue"
-        android:angle="180"
-        />
+    <solid android:color="@color/white_lolo" />
 </shape>
