--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -1,34 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+
 
 
 <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/area_cadastro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="estudo.produto.presenter.presenter.CadastroActivity"
     android:background="@drawable/background"
     >
-      <TextView
-          android:id="@+id/botao_voltar"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintBottom_toBottomOf="@id/textocadastro"
-          android:layout_marginEnd="350dp"
-          android:layout_marginBottom="100dp"
-          app:drawableStartCompat="@drawable/ic_voltar" />
+
     <TextView
         android:id="@+id/textocadastro"
         android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/titulo_cadastro"
          android:textSize="50sp"
         android:textStyle="bold"
@@ -45,18 +34,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textocadastro"
-               android:layout_height="340dp"
+               android:layout_height="370dp"
             />
 
     <EditText
         android:id="@+id/edit_usernome"
         style="@style/EditText"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/grupocadastro"
         app:layout_constraintStart_toStartOf="@id/grupocadastro"
         app:layout_constraintEnd_toEndOf="@id/grupocadastro"
         android:hint="Nome:"
+        android:drawableStart="@drawable/ic_user"
         android:inputType="text"
-
+        android:textColor="@color/white"
         />
     <EditText
         android:id="@+id/edit_useremail"
@@ -65,8 +56,9 @@
         app:layout_constraintStart_toStartOf="@id/grupocadastro"
         app:layout_constraintEnd_toEndOf="@id/grupocadastro"
         android:hint="Email:"
+        android:textColor="@color/white"
         android:inputType="textEmailAddress"
-         android:drawableEnd="@drawable/ic_email"
+         android:drawableStart="@drawable/ic_email"
         />
     <EditText
         android:id="@+id/edit_usersenha"
@@ -75,8 +67,9 @@
         app:layout_constraintStart_toStartOf="@id/grupocadastro"
         app:layout_constraintEnd_toEndOf="@id/grupocadastro"
         android:hint="Senha:"
+        android:textColor="@color/white"
         android:inputType="numberPassword"
-       android:drawableEnd="@drawable/ic_pass"
+       android:drawableStart="@drawable/ic_pass"
         />
 
     <Button
@@ -85,11 +78,10 @@
         android:text="@string/botao_cadastro"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_usersenha" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.core.widget.NestedScrollView>
