--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="estudo.produto.presenter.presenter.HomeActivity"
-    android:background="@drawable/background"
+    android:background="@color/silver"
     >
 
      <View
@@ -23,7 +25,7 @@
 
     <TextView
         android:layout_marginBottom="4dp"
-        android:layout_marginRight="-240dp"
+        android:layout_marginEnd="-240dp"
         android:id="@+id/bt_perfil"
         android:background="@drawable/ic_user"
         android:layout_marginTop="7dp"
@@ -37,7 +39,6 @@
 
     <TextView
         android:layout_marginBottom="4dp"
-
         android:id="@+id/bt_busca"
         android:background="@drawable/ic_search"
         android:layout_marginTop="7dp"
@@ -64,17 +65,16 @@
             app:drawableStartCompat="@drawable/ic_notice" />
 
 
-    <androidx.fragment.app.FragmentContainerView
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/container_fragment"
+            style="@style/Grupodecompoentes"
+            android:layout_height="630dp"
+            android:layout_width="match_parent"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/utlitarios"/>
 
-        android:id="@+id/container_fragment"
-        style="@style/Grupodecompoentes"
-        android:layout_height="630dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/utlitarios" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
