--- a/app/src/main/res/layout/fragment_usuario.xml
+++ b/app/src/main/res/layout/fragment_usuario.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/silver"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,6 +31,8 @@
         />
 
     <View
+
+        android:layout_height="330dp"
         android:id="@+id/Dados_usuario"
         style="@style/Grupodecompoentes"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,35 +41,36 @@
         app:layout_constraintTop_toBottomOf="@id/perfil_usario" />
 
     <TextView
-        android:background="@color/white"
+        style="@style/EditText"
         android:id="@+id/text_dados_nome"
         android:text = ""
         android:layout_marginTop="40dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_width="300dp"
-        android:layout_height="30dp"
+        android:layout_height="70dp"
         app:layout_constraintStart_toStartOf="@id/Dados_usuario"
         app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
         app:layout_constraintTop_toTopOf="@id/Dados_usuario"
         app:drawableLeftCompat="@drawable/ic_user" />
     <TextView
-        android:background="@color/white"
+        style="@style/EditText"
         android:id="@+id/text_dados_email"
         android:text= ""
         android:layout_marginTop="30dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_width="300dp"
-        android:layout_height="30dp"
+        android:layout_height="70dp"
         app:layout_constraintStart_toStartOf="@id/Dados_usuario"
         app:layout_constraintEnd_toEndOf="@+id/Dados_usuario"
         app:layout_constraintTop_toBottomOf="@id/text_dados_nome"
         app:drawableLeftCompat="@drawable/ic_email" />
 
     <Button
+        android:textColor="@color/black"
         android:id="@+id/bt_deslogar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
