--- a/app/src/main/res/layout/enter_activity.xml
+++ b/app/src/main/res/layout/enter_activity.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/silver"
     android:layout_height="match_parent"
-    tools:context=".presenter.ViewModel.Fragments.SearchFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="estudo.produto.presenter.presenter.LoginActivity">
 
-    <WebView
-        android:id="@+id/webview"
+    <FrameLayout
+        android:id="@+id/login_container_fragments"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-
-
+        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
