--- a/app/src/main/res/layout/fragment_usuario.xml
+++ b/app/src/main/res/layout/fragment_usuario.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="estudo.produto.presenter.presenter.ViewModel.fragmentHome.UserFragment">
+    tools:context="estudo.produto.presenter.presenter.ViewModel.Fragments.UserFragment">
 
     <View
         android:layout_marginTop="100dp"
