--- a/app/src/main/res/layout/fragment_first_notice.xml
+++ b/app/src/main/res/layout/fragment_first_notice.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:background="@color/silver"
     android:layout_height="match_parent"
-    tools:context=".presenter.ViewModel.Fragments.SearchFragment">
+    tools:context=".presenter.ViewModel.Fragments.NoticeFragment">
 
     <WebView
         android:id="@+id/webview"
