--- a/app/src/main/res/layout/fragment_initial.xml
+++ b/app/src/main/res/layout/fragment_initial.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:animateLayoutChanges="false"
     android:background="@color/silver"
     tools:context=".presenter.ViewModel.Fragments.InitialFragment">
 
       <ImageView
+          android:id="@+id/newsIcon"
           android:layout_width="300dp"
           android:layout_height="300dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginBottom="10dp"
           android:src="@drawable/ic_notice"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
-          android:layout_marginTop="20dp"/>
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintTop_toBottomOf="@id/newsIcon"
+         android:textColor="@color/white"
+         android:text="@string/news_app"
+         android:textSize="24sp"
+         android:textStyle="bold"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
